# Mmimo

./: README.md  dev.sh  pyproject.toml  tailwind.config.js
assets/: easymde.min.css  output.css
assets/js/: htmx.min.js
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_alter_post_slug.py  0004_post_status.py  0005_post_pinned_alter_post_slug_alter_post_title.py  0006_post_pub_date.py  0007_post_subtitle.py  0008_alter_post_pub_date.py
blog/templates/: admin-posts.html  base.html  base_public.html  create.html  edit.html  homepage.html  post_public.html
core/: settings.py  urls.py
templates/admin/: base.html  create.html  edit.html  posts.html
templates/blog/: base.html  homepage.html  post.html
templates/cotton/: button.html  button_link.html  topbar_admin.html  topbar_editor.html  topbar_public.html
templates/cotton/admin/: t_editor.html  topbar.html
templates/cotton/blog/: topbar.html
templates/includes/: lora_font.html
