[project]
name = "mimo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "", email = "" }]
dependencies = [
    "Django>=5.1.1",
    "django-browser-reload>=1.15.0",
    "markdown2[all]>=2.5.0",
    "django-htmx>=1.19.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm.scripts]
dev = "./dev.sh"

[tool.pdm]
distribution = false
